--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             readonly
             id="password"
             placeholder="Your Secure Password"
-            aria-label="Generated Password"
+            aria-label="Generated Password" style="background-color: #394049;"
           ></textarea>
         </div>
         <div class="card-footer">
